# image-based-fsd

./: .gitignore  README.md
prototype_sim_ws/src/fs_simulator/: package.xml
prototype_sim_ws/src/fs_simulator/config/: base_to_left_front_steer.yaml  base_to_right_front_steer.yaml  default.rviz  default_manual_control.rviz  default_ps3_manual.rviz  diffdrive.yaml
prototype_sim_ws/src/fs_simulator/launch/: autonomous_control_no_gui.launch  gazebo.launch  gazebo_no_gui.launch  gazebo_speed_unlocked.launch  joints.launch  manual_control.launch  manual_control_ps3.launch  prepro.launch  prepro_depth.launch  prepro_simplified.launch  record_ps3_simplified.launch  robot_visualizer.launch
prototype_sim_ws/src/fs_simulator/meshes/: BlueConeLowPoly.dae  YellowCone.dae  chasis_low_poly.stl  cup.dae  cup.stl  cup2.dae  tyre.dae
prototype_sim_ws/src/fs_simulator/meshes/asphalt/: model.config  model.sdf
prototype_sim_ws/src/fs_simulator/meshes/prototype_stl/: Back_Wheel_L.stl  Camera_Mount_A.stl  Camera_Mount_IMX219.stl  Front_Hub_L.stl  Front_Hub_R.stl  Front_Wheel_L.stl
prototype_sim_ws/src/fs_simulator/models/cone_blue/: model.sdf
prototype_sim_ws/src/fs_simulator/models/cone_blue/original/: model.sdf
prototype_sim_ws/src/fs_simulator/models/cone_orange/: model.sdf
prototype_sim_ws/src/fs_simulator/models/cone_orange_big/: model.sdf
prototype_sim_ws/src/fs_simulator/models/cone_yellow/: model.sdf
prototype_sim_ws/src/fs_simulator/models/cone_yellow/original/: model.sdf
prototype_sim_ws/src/fs_simulator/models/track/: acceleration.sdf  model.config  prototype_track_1.sdf  prototype_track_10.sdf  prototype_track_101.sdf  prototype_track_102.sdf  prototype_track_103.sdf  prototype_track_104.sdf  prototype_track_105.sdf  prototype_track_106.sdf  prototype_track_107.sdf  prototype_track_108.sdf  prototype_track_109.sdf  prototype_track_11.sdf  prototype_track_110.sdf  prototype_track_111.sdf  prototype_track_112.sdf  prototype_track_113.sdf  prototype_track_114.sdf  prototype_track_115.sdf  prototype_track_116.sdf  prototype_track_12.sdf  prototype_track_13.sdf  prototype_track_14.sdf  prototype_track_15.sdf  prototype_track_16.sdf  prototype_track_17.sdf  prototype_track_18.sdf  prototype_track_19.sdf  prototype_track_2.sdf  prototype_track_20.sdf  prototype_track_3.sdf  prototype_track_4.sdf  prototype_track_5.sdf  prototype_track_6.sdf  prototype_track_7.sdf  prototype_track_8.sdf  prototype_track_9.sdf  prototype_track_gan.sdf  prototype_track_skidpad.sdf  (+11 more)
prototype_sim_ws/src/fs_simulator/models/track/tracks_yaml/: agus_test.yaml  apricot.yaml  final_test.yaml  high_speed_ring.yaml  loop.yaml  prototype_track_1.yaml  prototype_track_10.yaml  prototype_track_101.yaml  prototype_track_102.yaml  prototype_track_103.yaml  prototype_track_104.yaml  prototype_track_105.yaml  prototype_track_106.yaml  prototype_track_107.yaml  prototype_track_108.yaml  prototype_track_109.yaml  prototype_track_11.yaml  prototype_track_110.yaml  prototype_track_111.yaml  prototype_track_112.yaml  prototype_track_113.yaml  prototype_track_114.yaml  prototype_track_115.yaml  prototype_track_116.yaml  prototype_track_12.yaml  prototype_track_13.yaml  prototype_track_14.yaml  prototype_track_15.yaml  prototype_track_16.yaml  prototype_track_17.yaml  prototype_track_18.yaml  prototype_track_19.yaml  prototype_track_2.yaml  prototype_track_20.yaml  prototype_track_3.yaml  prototype_track_4.yaml  (+23 more)
prototype_sim_ws/src/fs_simulator/scripts/: Nurburgring_yellow.stl  front_steer_akermann.py  name_sdf.py  small_track_blue.stl  stl2world.py
prototype_sim_ws/src/fs_simulator/scripts/prepro/: eval_gan_depth_map.py  evaluate_gan.py  train_gan.py
prototype_sim_ws/src/fs_simulator/urdf/: fs_bumpers.xacro  fs_prepro_simplified.urdf.xacro  prototype.urdf.xacro  prototype_simplified.urdf.xacro
prototype_sim_ws/src/fs_simulator/worlds/: Nurburgring_non_collidable.world  track_def.world  track_def_prepro_extra_lights.world  track_def_reinf.world
(+272 files in other folders)
